--- a/_config.yml
+++ b/_config.yml
@@ -111,7 +111,7 @@ analytics:
 author:
   name             : "Yohan Jun"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "Research Fellow at Martinos Center for Biodmedical Engineering and Harvard Medcial School"
+  bio              : "Research Fellow<br>Martinos Center for Biodmedical Engineering and Harvard Medcial School"
   location         : "Boston, MA"
   email            :
   links:
