--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,7 +7,7 @@ main:
   - title: "Publications"
     url: /publications/
   - title: "Curriculum Vitae"
-    url: /assets/CV.pdf
+    url: /assets/CV_Yohan_Jun.pdf
   # - title: "About"
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
   # - title: "Sample Posts"
