--- a/_config.yml
+++ b/_config.yml
@@ -94,6 +94,7 @@ social:
   name                   : Yohan Jun
   links: # An array of links to social media profiles
     - "https://github.com/yohan-jun"
+    - "https://www.linkedin.com/in/yohan-jun/"
     - "https://scholar.google.com/citations?user=rSlCtLYAAAAJ&hl=en"
     - "https://www.semanticscholar.org/author/Yohan-Jun/10750431"
     - "https://orcid.org/0000-0003-4787-4760"
@@ -117,7 +118,7 @@ author:
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-      # url: "mailto:your.name@email.com"
+      url: "mailto:yjun@mgh.harvard.edu"
     - label: "Website"
       icon: "fas fa-fw fa-link"
       # url: "https://your-website.com"
@@ -127,6 +128,9 @@ author:
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook-square"
       # url: "https://facebook.com/"
+    - label: "LinkedIn"
+      icon: "fab fa-fw fa-linkedin-in"
+      url: "https://www.linkedin.com/in/yohan-jun/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/yohan-jun"
