--- a/_config.yml
+++ b/_config.yml
@@ -102,9 +102,9 @@ social:
 
 # Analytics
 analytics:
-  provider               : false # false (default), "google", "google-universal", "google-gtag", "custom"
+  provider               : "google" # false (default), "google", "google-universal", "google-gtag", "custom"
   google:
-    tracking_id          :
+    tracking_id          : G-FHC5G27J97
     anonymize_ip         : # true, false (default)
 
 
