--- a/_config.yml
+++ b/_config.yml
@@ -104,7 +104,7 @@ social:
 analytics:
   provider               : "google" # false (default), "google", "google-universal", "google-gtag", "custom"
   google:
-    tracking_id          : G-FHC5G27J97
+    tracking_id          : "G-FHC5G27J97"
     anonymize_ip         : # true, false (default)
 
 
