--- a/_config.yml
+++ b/_config.yml
@@ -102,9 +102,10 @@ social:
 
 # Analytics
 analytics:
-  provider               : google-gtag # false (default), "google", "google-universal", "google-gtag", "custom"
+  provider               : "google-gtag" # false (default), "google", "google-universal", "google-gtag", "custom"
   google:
-    tracking_id          : G-FHC5G27J97
+    tracking_id          : "G-FHC5G27J97"
+    measurement_id       : "G-FHC5G27J97"
     anonymize_ip         : # true, false (default)
 
 
