--- a/_config.yml
+++ b/_config.yml
@@ -104,8 +104,7 @@ social:
 analytics:
   provider               : "google-gtag" # false (default), "google", "google-universal", "google-gtag", "custom"
   google:
-    tracking_id          : "G-FHC5G27J97"
-    measurement_id       : "G-FHC5G27J97"
+    tracking_id          : "G-6MZY7YEZYT"
     anonymize_ip         : # true, false (default)
 
 
