--- a/_config.yml
+++ b/_config.yml
@@ -102,10 +102,11 @@ social:
 
 # Analytics
 analytics:
-  provider               : "custom" # false (default), "google", "google-universal", "google-gtag", "custom"
+  provider               : "google-gtag" # false (default), "google", "google-universal", "google-gtag", "custom"
   google:
     tracking_id          : "G-6MZY7YEZYT"
     anonymize_ip         : # true, false (default)
+    cookie_settings      : "SameSite=None;Secure"
 
 
 # Site Author
