--- a/_config.yml
+++ b/_config.yml
@@ -105,7 +105,7 @@ analytics:
   provider               : "google-gtag" # false (default), "google", "google-universal", "google-gtag", "custom"
   google:
     tracking_id          : "G-6MZY7YEZYT"
-    anonymize_ip         : # true, false (default)
+    anonymize_ip         : false # true, false (default)
     cookie_settings      : "SameSite=None;Secure"
 
 
