--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,6 +6,8 @@ main:
     url: /about/
   - title: "Teaching"
     url: /teaching/
+  - title: "Honors"
+    url: /honors/
   - title: "Publications"
     url: /publications/
   - title: "Curriculum Vitae"
