--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,6 +8,8 @@ main:
     url: /teaching/
   - title: "Honors"
     url: /honors/
+  - title: "Talks"
+    url: /talks/
   - title: "Publications"
     url: /publications/
   - title: "Curriculum Vitae"
