--- a/_config.yml
+++ b/_config.yml
@@ -112,7 +112,7 @@ analytics:
 author:
   name             : "Yohan Jun"
   avatar           : "/assets/images/bio-photo.jpg"
-  bio              : "Research Fellow<br>Martinos Center for Biodmedical Engineering and Harvard Medcial School"
+  bio              : "Research Fellow<br>Martinos Center for Biodmedical Imaging and Harvard Medcial School"
   location         : "Boston, MA"
   email            :
   links:
